--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="/styles/atom-one-dark.css">
         <title>Document</title>
     </head>
     <body>
@@ -30,8 +29,9 @@
                 width: 30%;
             }
         </style>
+        <link rel="stylesheet" href="/styles/atom-one-dark.css">
         <p>ბოსელშია ერთი ძროხა, ის ოთხი წლის მერე იწყებს ბოჩოლების გაჩენას, აჩენს წელიწადში 1 ბოჩოლას. ეს ბოჩოლებიც 4 წლის მერე იწყებენ სხვა ბოჩოლების გაჩენას
-            რამდენი ძროხა იქნება ბოსელღი თუ ყველა ძროხა დედალია და ყველა მრავლდება?
+            რამდენი ძროხა იქნება ბოსელში თუ ყველა ძროხა დედალია და ყველა მრავლდება?
         </p>
         <P>პასუხია</P>
         <div id="con">
