--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </style>
         <link rel="stylesheet" href="styles/atom-one-dark.css">
         <p>ბოსელშია ერთი ძროხა, ის ოთხი წლის მერე იწყებს ბოჩოლების გაჩენას, აჩენს წელიწადში 1 ბოჩოლას. ეს ბოჩოლებიც 4 წლის მერე იწყებენ სხვა ბოჩოლების გაჩენას
-            რამდენი ძროხა იქნება ბოსელში თუ ყველა ძროხა დედალია და ყველა მრავლდება?
+            რამდენი ძროხა იქნება ბოსელში 40 წლის შემდეგ თუ ყველა ძროხა დედალია და ყველა მრავლდება?
         </p>
         <P>პასუხია</P>
         <div id="con">
@@ -76,7 +76,6 @@ for (let i = 1; i <= 40; i++) {
     
     <script src="highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-    <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.13.1/build/highlight.min.js"></script>
     <script src="./src/app.js"></script>
 </body>
 </html>
